# SDD2022

./: .gitignore  CMakeLists.txt
1053/: 1053_seminar01.c  1053_seminar02.c  1053_seminar03.c  1053_seminar04.c  1053_seminar05.c  1053_seminar06.c  1053_seminar07.c  1053_seminar09.c  1053_seminar10.c  1053_seminar11.c.txt  1053_seminar12.c.txt  1053_seminar13.c  FisierNumereIntregi_Seminar2.txt  MatriceStudenti_Seminar3.txt  Student_Seminar2.txt
1056/: 1056_Seminar09.c  1056_Seminar10.c  1056_seminar01.c  1056_seminar02.c  1056_seminar03.c  1056_seminar04.c  1056_seminar05.c  1056_seminar06.c  1056_seminar07.c  1056_seminar09.c  1056_seminar10.c  1056_seminar11.c  1056_seminar12.c  1056_seminar13.c  Masina_Seminar2.txt  MatriceMasini_Seminar3.txt  VectorMasini_Seminar2.txt
